--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,10 +45,10 @@
         <%= f.file_field :user_img_url, class: "profile_img", accept: 'image/png,image/gif,image/jpeg' %>
       </div>
 
-        <div class="field">
-          <%= f.text_field :grade, class: "sign_up_input", placeholder: "등급을 적어주세요." %>
-        </div>
-      
+        <!--<div class="field">-->
+          <!--<%= f.text_field :grade, class: "sign_up_input", placeholder: "등급을 적어주세요." %>-->
+        <!--</div>-->
+      <!---->
       <div class="actions">
         <%= f.submit "회원 가입", class: "sign_up_button" %>
       </div>
