--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,7 +38,9 @@
                 <div class="index_p">
                     <h1>행복하고 완벽한 여행을 위한 선택</h1>
                     <h4>델포이의 멘토들과 함께 멋진 계획을 세우고, 최고의 여행을 즐기세요.</h4>
-                    <div class="planner_button"><a href="/mentoring_apply" class="planner_a_button">멘토 상담 신청하기 </a></div>
+                    <a href="/mentoring_apply" class="planner_a_button">
+                      멘토 상담 신청하기
+                    </a>
                 </div>
             </div>  
         </div>
