--- a/app/views/home/mypage.html.erb
+++ b/app/views/home/mypage.html.erb
@@ -77,7 +77,7 @@
                         <a class = "travel_now_a" href="/mypage/checkout?list_id=<%=q.id%>">
                           <div class="travel_now">
                             <div>
-                              <h2>여행 제목</h2>
+                              <h2><%= q.title %></h2>
                               <p>(<%= q.from %> ~ <%= q.to %>)</p>
                               <p><%= q.mentor_area %></p>
                             </div>
@@ -104,7 +104,7 @@
                           <a class = "travel_now_a" href="/mypage/checkout?list_id=<%=p.id%>">
                             <div class="travel_now">
                               <div>
-                                <h2>여행 제목</h2>
+                                <h2><%= p.title %></h2>
                                 <p>(<%= p.from %> ~ <%= p.to %>)</p>
                                 <p><%= p.mentor_area %></p>
                               </div>
