--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,8 @@
             <div class="basic_header">
                 <div class="logo">
                     <a href="/">
-                    <%= image_tag("logo.png" , id:'logo')  %>
+                    	<img src = " <%= image_path "logo.png" %> " id= "logo" >   
+                    
                     </a>
                 </div>
                 <div class="menu">
