--- a/app/views/home/mentoring.html.erb
+++ b/app/views/home/mentoring.html.erb
@@ -4,8 +4,9 @@
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="basic_header">
         <div class="logo">
-          <a href="/">
-            <%= image_tag("logo.png" , id:'logo')  %>
+          <a href="/">          
+            <img src = " <%= image_path 'logo.png' %>" id ="logo">
+            
           </a>
         </div>
         <div class="menu">
