--- a/app/views/home/banner.html.erb
+++ b/app/views/home/banner.html.erb
@@ -2,6 +2,7 @@
     <div class="wrapper_banner">
         <div class="banner">
             <%= image_tag("logo.png")  %>
+            <img src = " <%= image_path 'logo.png' %> " >
         </div>
     </div>
 </section>
