--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -5,7 +5,7 @@
             <div class="basic_header">
                 <div class="logo">
                     <a href="/">
-                    <%= image_tag("logo.png" , id:'logo')  %>
+                    <img src = " <%= image_path 'logo.png' %>" id='logo'>
                     </a>
                 </div>
                 <div class="menu">
@@ -64,21 +64,22 @@
                         <h3>공유를 바탕으로 한 커뮤니티</h3>
                         <p>델포이는 20016년에 두 명의 개발자가 여행 계획을 짜는 데 어려움을 겪는데부터 시작했습니다. 이제는 전 세계에 백만 명이 넘는 멘토와 멘티가 델포이에 무료로 가입하여 자신들의 여행 경험을 맘껏 나누고 있습니다.</p>
                     </div>
-                    <%= image_tag("start1.png", class: 'start') %>      
+                    <%= image_tag("start1.png", class: 'start') %>
+                    <img src = " <%= image_path 'start1.png' %>" class='start'>      
                 </div>
                 <div>
                     <div>
                         <h3>신뢰를 바탕으로 하는 서비스</h3>
                         <p>델포이는 쉽고 믿을 만하고 안전 합니다. 델포이는 개인 프로필과 개인 정보를 인증합니다. 스마트한 메시징 시스템을 통해 멘토와 멘티는 마음 놓고 여행에 관해 이야기를 할 수 있으며, 안전한 전자거래 서비스를 제공하고 있습니다.</p>
                     </div>
-                    <%= image_tag("start2.png", class: 'start') %>
+                   <img src = " <%= image_path 'start2.png' %>" class='start'>
                 </div>
                 <div class="start_3">
                     <div>
                         <h3>연중무휴 고객 지원</h3>
                         <p>델포이는 회원님의 멘토링 또는 여행의 경험 전 과정을 함께합니다. 델포이에 관해 가장 자주 묻는 질문은 도움말 센터에서 찾으실 수 있습니다. 그리고 언제든 Delpoy.co.kr/contact를 방문하여 직접 연락하실 수 있습니다.</p>
                     </div>
-                    <%= image_tag("start3.png", class: 'start') %>
+                    <img src = " <%= image_path 'start3.png' %>" class='start'>
                 </div>
             </div>
         </div>
