--- a/app/views/home/service.html.erb
+++ b/app/views/home/service.html.erb
@@ -5,8 +5,8 @@
 
             <div class="basic_header">
                 <div class="logo">
-                    <a href="/">
-                    <%= image_tag("logo.png" , id:'logo')  %>
+                    <a href="/">                  
+                    <img src = " <%= image_path 'logo.png' %>" id='logo'>
                     </a>
                 </div>
                 <div class="menu">
