채팅 기능 CSS 수정

--- a/app/views/mentoring/mentoring_view.html.erb
+++ b/app/views/mentoring/mentoring_view.html.erb
@@ -47,8 +47,8 @@
     <div class="mentoring_all_view_div">
       <br>
       <div class="panel panel-default panel-edit chatting_view">
-        <div class="panel-body">
-          <p>1:1 채팅</p>
+        <div class="panel-body chatting-container">
+          <p style="padding: 20px;">1:1 채팅</p>
 
           <div id="messages" data-chat-room-id="<%= @chat_room.id %>">
               <%= render @chat_room.messages %>
