수정   멘토페이지 > 멘티 상황보기    - controller 추가    - routes 변경 (mypage/mentoring > mentoring#menteeing)

--- a/app/views/mentoring/mentor_view.html.erb
+++ b/app/views/mentoring/mentor_view.html.erb
@@ -92,7 +92,7 @@
                 	<% @mentoring.each do |m|%>
                 		<% @detail.each do |p|%>
                 			<% if m.list_id==p.id && p.complete==1 %>
-		                    <a class = "travel_now_a" href="/mypage/mentoring?list_id=<%=m.id%>">
+		                    <a class = "travel_now_a" href="/menteeing?list_id=<%=p.id%>">
 		                    	<div class="travel_now">
 			                      <div>
 			                        <h2>여행제목</h2>
